# Agent-Base-Zero

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  main.py  pyproject.toml  requirements.txt
agent/: agent.py  cli.py  client.py  config.py  memory.py  plan.py  plan_input.py  plan_parser.py  plan_renderer.py  prompt.py  session.py  shimmer.py  system_prompt.md  tokens.py
agent/prompts/: plan_prompt.md
docs/v01/: architecture_en.md  architecture_zh.md
docs/v02/: architecture_en.md  architecture_zh.md
docs/v03/: architecture_en.md  architecture_zh.md
docs/v04/: architecture_en.md  architecture_zh.md
docs/v05/: architecture_en.md  architecture_zh.md  normal_vs_plan_mode_logic_en.md  normal_vs_plan_mode_logic_zh.md
skills/: __init__.py  registry.py
skills/code_assistant/: SKILL.md
skills/research/: SKILL.md
tools/: __init__.py  current_time.py  edit_file.py  fetch_url.py  file_delete.py  find_file.py  grep_search.py  list_dir.py  memory_save.py  read_file.py  registry.py  research_topic.py  run_command.py  session_search.py  system_info.py  tree.py  web_search.py  write_file.py
